--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>public.io - FullStackJS</title>
+    <title>branas.io - FullStackJS</title>
   </head>
   <body>
     <div id="app"></div>
